# GYOJ

./: .gitignore  README.md
client/gyoj-client/: CMakeLists.txt  README.md  gyoj-client.example.json
client/gyoj-client/qml/: OjWebView.qml
client/gyoj-client/src/: ApiClient.cpp  ApiClient.h  AppConfig.cpp  AppConfig.h  CodeEditor.cpp  CodeEditor.h  LocalRunner.cpp  LocalRunner.h  MainWindow.cpp  MainWindow.h  ProctorController.cpp  ProctorController.h  main.cpp
client/oj-shell/: gyoj-shell.json  package-lock.json  package.json
client/oj-shell/src/: lock.css  lock.html  lock.js  main.js  preload.js  tools.css  tools.html  tools.js
deploy/: README.md  bootstrap-onlinejudge.ps1  create-super-admin.ps1  init-hydro-admin.ps1  publish-github.ps1
docs/: client-design.md  github-publish.md  hydro-data-migration.md  integration-guide.md  test-matrix.md  thesis-draft.md  thesis-outline.md
server/: README.md
server/onlinejudge_proctoring/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
server/onlinejudge_proctoring/migrations/: 0001_initial.py
server/onlinejudge_proctoring/tests/: test_services.py
